# nba-prediction-analysis

./: .gitignore  Procfile  README.md  app.py  database.py  database_uri.py  environment.yml  pyproject.toml
ETL_and_sqlalchemy/: nba_stats_extract.ipynb  nba_stats_transform_load.ipynb  query_db_prototype.ipynb  sql_alchemy_prototype.ipynb
flowcharts/: erd_playoffs.txt  erd_season.txt
machine_learning/: ML_outline.ipynb  nba_stats_ml.ipynb
notebooks/ETL_and_sqlalchemy/: nba_stats_extract.ipynb  nba_stats_transform_load.ipynb  query_db_prototype.ipynb
notebooks/html_table_customization/: html_table_customization.ipynb
notebooks/machine_learning/: ml_outline.ipynb  nba_stats_ml.ipynb
src/: app.py  database.py  extensions.py  models.py  routes.py  utils.py
src/data/: feature_importance.csv  probability_estimates.csv
src/static/css/: style.css
src/templates/: base.html  comparison.html  defense_offense.html  game_evolution.html  glossary.html  index.html  navbar.html  people.html  prediction.html
templates/: base.html  defense_offense.html  glossary.html  index.html  navbar.html  prediction.html
