[tool.poetry]
name = "nba-prediction-analysis"
version = "0.1.0"
description = ""
authors = ["Chris Peterson <cdpeters1@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
numpy = {version = "^1.26.0", python=">=3.11,<3.13"}
pandas = "^2.1.1"
sqlalchemy = "^2.0.22"
selenium = "^4.14.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
jupyterlab = "^4.0.7"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
nbqa = "^1.7.0"
catppuccin-jupyterlab = "^0.2.0"
docrepr = "^0.2.0"
beautifulsoup4 = "^4.12.2"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.nbqa.addopts]
flake8 = [
    "--extend-ignore=D100,E501"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
